# Portfolio-AppWorks

./: .gitignore  README.md  exec_test.sh  pyproject.toml
allure_report/: .gitignore  environment.properties
allure_report/API_Test/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure_report/API_Test/export/: influxDbData.txt  prometheusData.txt
allure_report/API_Test/history/: duration-trend.json  history.json
allure_report/API_Test/widgets/: behaviors.json  categories-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
allure_report/UI_Test/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure_report/UI_Test/export/: influxDbData.txt  prometheusData.txt
allure_report/UI_Test/history/: categories-trend.json  history.json  retry-trend.json
allure_report/UI_Test/widgets/: suites.json  (+8 more)
api_objects/: admin.py  order.py  products.py  request_util.py  user.py
database/: config.py  stylish_backend.py
page_objects/: admin_page.py  base_page.py  browser.py  cart_page.py  home_page.py  login_page.py  prime_page.py  product_page.py
test_data/: Stylish-Test Case.xlsx  get_data_from_excel.py
tests_api/: conftest.py  test_admin_apis.py  test_order_apis.py  test_products_apis.py  test_user_apis.py
tests_web/: conftest.py  test_web_category.py  test_web_checkout.py  test_web_create_product.py  test_web_login.py  test_web_product_page.py  test_web_search.py  test_web_shopping_cart.py
(+717 files in other folders)
